--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
             <h1 class="logo">Gaurav Chanda</h1>
             <ul>
                 <li><a href="mailto:gauravchanda2022@gmail.com">Email</a></li>
-                <li><a href="www.linkedin.com/in/gauravchanda2022">Linkedin</a></li>
-                <li><a href="https://github.com/GauravChanda7">Github</a></li>
+                <li><a href="https://in.linkedin.com/in/gauravchanda2022" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
+                <li><a href="https://github.com/GauravChanda7" target="_blank" rel="noopener noreferrer">Github</a></li>
             </ul>
         </header>
 
         <div class="content">
             <div class="introduction">
                 <div>
-                    <div class="greeting">
-                        <p>Hi,</p>
-                        <p>I'm <span>Gaurav</span></p>
-                        <p>a FrontEnd Developer</p>
+                    <div>
+                        <div class="greeting">
+                            <p>Hi,</p>
+                            <p>I'm <span>Gaurav</span></p>
+                            <p>a FrontEnd Developer</p>
+                        </div>
+                        <p class="intro-body">I'm a Computer Science and Engineering student at Kalinga Institute of Industrial Technology, passionate about blending creativity and technology to build impactful web experiences. With a strong foundation in programming and design, I strive to create user-centric, visually engaging solutions. Beyond academics, I enjoy solving problems and continuously evolving as a developer.</p>
                     </div>
-                    <p class="intro-body">I'm a Computer Science and Engineering student at Kalinga Institute of Industrial Technology, passionate about blending creativity and technology to build impactful web experiences. With a strong foundation in programming and design, I strive to create user-centric, visually engaging solutions. Beyond academics, I enjoy solving problems and continuously evolving as a developer.</p>
+                    
                     <div class="resume-button">
                         <a href="https://drive.google.com/file/d/1YUx9CQh7HtgsDuLVgzoMUNicSlTjjad5/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
                     </div>
@@ -38,30 +41,33 @@
 
             <div class="projects">
                 <h1>Projects</h1>
-                <div>
-                    <img src="images/githubLogo.png" alt="project 1">
-                    <h3>Project 1</h3>
-                    <p>Description</p>
-                </div>
-                <div>
-                    <img src="images/githubLogo.png" alt="project 2">
-                    <h3>Project 2</h3>
-                    <p>Description</p>
-                </div>
-                <div>
-                    <img src="images/githubLogo.png" alt="project 3">
-                    <h3>Project 3</h3>
-                    <p>Description</p>
+                
+                <div class="project-box">
+                    <div>
+                        <img src="images/githubLogo.png" alt="project 1">
+                        <h3>Project 1</h3>
+                        <p>Description</p>
+                    </div>
+                    <div>
+                        <img src="images/githubLogo.png" alt="project 2">
+                        <h3>Project 2</h3>
+                        <p>Description</p>
+                    </div>
+                    <div>
+                        <img src="images/githubLogo.png" alt="project 3">
+                        <h3>Project 3</h3>
+                        <p>Description</p>
+                    </div>
                 </div>
             </div>
 
             <div class="about-me">
                 <h2>About me,</h2>
                 <div class="description">
-                    <p>Hi, I’m Gaurav Chanda, a passionate Computer Science and Engineering student at Kalinga Institute of Industrial Technology. I specialize in frontend development and have a solid grasp of modern technologies, including JavaScript, React, Node.js, and the MERN stack.</p>
-                    <p>One of my most significant projects is BrowserDotCom, a custom web browser built using JavaFX. It features multi-tab browsing, bookmark management, keyboard shortcuts, and an integrated browsing history powered by JDBC. This project challenged me to combine usability and performance, deepening my knowledge of software design and user experience.</p>
-                    <p>My toolkit extends to HTML, CSS, Python, MySQL, and Git, enabling me to tackle diverse challenges and create innovative solutions. Beyond coding, I’m an avid problem-solver who enjoys competitive programming and staying updated on emerging tech trends.</p>
-                    <p>Feel free to connect with me—I’m always excited to collaborate and explore new opportunities!</p>
+                    <p>Hi, I’m Gaurav Chanda, a Computer Science and Engineering student at Kalinga Institute of Industrial Technology with a passion for frontend development. I specialize in JavaScript, React, Node.js, and the MERN stack, with expertise in building responsive, user-friendly applications.</p>
+                    <p>A highlight of my work is BrowserDotCom, a custom JavaFX web browser with multi-tab browsing, bookmarks, keyboard shortcuts, and JDBC-powered history. This project honed my skills in software design and user experience.</p>
+                    <p>My toolkit includes HTML, CSS, Python, MySQL, and Git. I’m also an avid problem-solver and competitive programmer who thrives on learning and embracing new tech trends.</p>
+                    <p class="connect"><a href="https://in.linkedin.com/in/gauravchanda2022" target="_blank" rel="noopener noreferrer">Let's Connect</a></p>
                 </div>
             </div>
 
@@ -74,7 +80,7 @@
             </div>
 
             <footer>
-                <h1 class="logo">Gaurav Chanda</h1>
+                <h1 class="logo"><span>Gaurav</span> Chanda</h1>
             </footer>
 
         </div>
