Add profile-pic to the website
My photo is added and is made the image dynamic

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
         <div class="content">
             <div class="introduction">
-                <div>
-                    <div>
+                <div class="left">
+                    <div class="intro">
                         <div class="greeting">
                             <p>Hi,</p>
                             <p>I'm <span>Gaurav</span></p>
@@ -34,7 +34,7 @@
                 </div>
                 
                 <div class="profile-photo">
-                    <img src="" alt="My photo">
+                    <img src="./images/profile-pic.png" alt="My photo">
                 </div>
             </div>
             
